--- a/l01/zad1/turtle.css
+++ b/l01/zad1/turtle.css
@@ -1,4 +1,29 @@
+* {
+    font-family: monospace;
+}
+
 #logoCanvas {
     border: 1px solid #000000;
     background-color: azure;
+    margin-right: 20px;
+}
+
+#logoSide {
+    display: flex;
+    flex-direction: column;
+    min-width: 220px;
+}
+
+#coords {
+    display: inline-block;
+}
+
+#controlInput {
+    margin-right: 10px;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
 }
