--- a/l02/shared/style.css
+++ b/l02/shared/style.css
@@ -30,3 +30,8 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.game {
+    background-color: #09132b !important;
+    border-color: gold !important; 
+}
